@@ -15,8 +15,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>22</maven.compiler.source>
+        <maven.compiler.target>22</maven.compiler.target>
         <junit.version>5.10.1</junit.version>
         <jmh.version>1.37</jmh.version>
         <fmt.version>2.23</fmt.version>
@@ -88,6 +88,22 @@
                     <cleanupDaemonThreads>false</cleanupDaemonThreads>
                     <longClasspath>true</longClasspath>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <additionalClasspathElements>
+                                <additionalClasspathElement>${project.build.outputDirectory}</additionalClasspathElement>
+                            </additionalClasspathElements>
+                            <jvmArgs>
+                                <jvmArg>--add-modules</jvmArg>
+                                <jvmArg>jdk.incubator.vector</jvmArg>
+                            </jvmArgs>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
 
             <!-- JAR plugin with manifest -->
@@ -110,6 +126,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0</version>
+                <configuration>
+                    <argLine>--add-modules jdk.incubator.vector</argLine>
+                </configuration>
             </plugin>
 
             <!-- Google Java Format plugin -->
